# bitescore-dev

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.yml
bitescore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/examples/: example_genome.fna  example_proteome.faa
data/examples/results_af2/: log.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: FeatureTable.tsx  Layout.tsx  Navbar.tsx  ProgressBar.tsx  RadarChart.tsx  ScoreGauge.tsx  StructureViewer.tsx
frontend/src/hooks/: useJobPoller.ts
frontend/src/pages/: AboutPage.tsx  HomePage.tsx  PredictPage.tsx  ResultsPage.tsx
frontend/src/types/: index.ts
notebooks/: bitescore_chatbot.ipynb
notebooks/.ipynb_checkpoints/: bitescore_chatbot-checkpoint.ipynb
resources/: README.txt
src/bitescore/: cli.py  pipeline.py  report.py
src/bitescore/api/: main.py  schemas.py
src/bitescore/app/: chatbot.py
src/bitescore/data/: reference_proteins.py
src/bitescore/features/: aa.py  cleavage.py  esm.py  extract.py  function.py  go.py  hooks.py  structure.py
src/bitescore/gene_callers/: call.py  external.py  orf.py
src/bitescore/io/: loaders.py
src/bitescore/ml/: calibrate.py  digestibility_ref.py  mil.py  rank.py
src/bitescore/tools/: blast.py  cdhit.py  hmmer.py  interpro.py  localcolabfold.py  low_complexity.py
src/bitescore/utils/: config.py  logging.py
tests/: test_annotation_hooks.py  test_calibrate.py  test_chatbot_utils.py  test_digestibility_ref.py  test_esm_features.py  test_features_aa.py  test_features_function.py  test_features_regsite.py  test_features_structure.py  test_import.py  test_mil.py  test_pipeline_rank_features.py  test_rank_calibration.py  test_reference_proteins.py  test_structure_proxies.py
tests/call-genes_tests/: loaded.faa
